improvements : homepage title

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,6 @@
-%h1 Vehicles (Live)
+.page-title
+  %h3
+    Vehicles (Live)
 .row
   .col-md-8
     .row.tiles-container.tiles.white.hidden-xlg.m-b-20
