added name column to vehicles

--- a/app/views/alarm_notifications/index.html.haml
+++ b/app/views/alarm_notifications/index.html.haml
@@ -1,10 +1,15 @@
+.page-title
+  %h3
+    Alarm notifications
+
 .row
   .col-md-12
     .grid.simple
       .grid-title.no-border
-        %h3
-          Alarm notifications
-        
+        %h4
+          &nbsp;
+        .tools
+          %a.collapse{href: "javascript:;"}
       .grid-body.no-border
         %table.table.no-more-tables
           %thead
