--- a/app/views/cars/_form.html.haml
+++ b/app/views/cars/_form.html.haml
@@ -1,68 +1,105 @@
 = form_for @car do |f|
-  - if @car.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@car.errors.count, "error")} prohibited this car from being saved:"
-      %ul
-        - @car.errors.full_messages.each do |msg|
-          %li= msg
+  .page-title
+    %h3
+      Add Vehicle
+  .row
+    .col-md-12
+      .grid.simple
+        .grid-title 
+          %h4
+            Vehicle 
+            %span.semi-bold details
+          .tools
+            %a.collapse{href: "javascript:;"}
+        .grid-body
+          .row
+            .col-md-8.col-sm-8.col-xs-8
+              - if @car.errors.any?
+                #error_explanation
+                  %h2= "#{pluralize(@car.errors.count, "error")} prohibited this car from being saved:"
+                  %ul
+                    - @car.errors.full_messages.each do |msg|
+                      %li= msg
 
-  .form-group  
-    = f.label :numberplate, class: "form-label"
-    = f.text_field :numberplate, class: "form-control"
+              .form-group  
+                = f.label :numberplate, class: "form-label"
+                = f.text_field :numberplate, class: "form-control"
 
-  .form-group 
-    = f.label :mileage, class: "form-label"
-    = f.text_field :mileage, class: "form-control"
-  
-  .form-group
-    = f.label :car_model, class: "form-label"
-    = f.collection_select(:car_model_id, CarModel.all, :id, :name, {}, class: "form-control" )
+              .form-group 
+                = f.label :mileage, class: "form-label"
+                = f.text_field :mileage, class: "form-control"
+              
+              .form-group
+                = f.label :car_model, "Vehicle model" ,class: "form-label"
+                = f.collection_select(:car_model_id, CarModel.all, :id, :name, {}, class: "form-control" )
 
-  .form-group
-    = f.label :car_type, class: "form-label"
-    = f.collection_select(:car_type_id, CarType.all, :id, :name, {}, class: "form-control")
-  
-  .form-group
-    = f.label :device, class: "form-label"
-    - if @car.has_device?
-      = list_devices_with_default(@car.device)
-    - else
-      - if no_available_devices? 
-        = list_no_available_devices
-      - else 
-        = list_available_devices
+              .form-group
+                = f.label :car_type, "Vehicle type" ,class: "form-label"
+                = f.collection_select(:car_type_id, CarType.all, :id, :name, {}, class: "form-control")
+              
+              .form-group
+                = f.label :device, class: "form-label"
+                - if @car.has_device?
+                  = list_devices_with_default(@car.device)
+                - else
+                  - if no_available_devices? 
+                    = list_no_available_devices
+                  - else 
+                    = list_available_devices
 
-  .form-group
-    = f.label :driver, class: "form-label"
-    - if @car.has_driver?
-      = list_drivers_with_default(@car.driver)
-    - else
-      - if no_available_drivers? 
-        = list_no_available_drivers
-      - else 
-        = list_available_drivers
+              .form-group
+                = f.label :driver, class: "form-label"
+                - if @car.has_driver?
+                  = list_drivers_with_default(@car.driver)
+                - else
+                  - if no_available_drivers? 
+                    = list_no_available_drivers
+                  - else 
+                    = list_available_drivers
 
-  .form-group
-    = f.label :registration_no, class: "form-label"
-    = f.text_field :registration_no, class: "form-control"
-  .form-group
-    = f.label :year, class: "form-label"
-    = f.text_field :year, class: "form-control"
-  .form-group
-    = f.label :color, class: "form-label"
-    = f.text_field :color, class: "form-control"
+              .form-group
+                = f.label :registration_no, class: "form-label"
+                = f.text_field :registration_no, class: "form-control"
+              .form-group
+                = f.label :year, class: "form-label"
+                = f.text_field :year, class: "form-control"
+              .form-group
+                = f.label :color, class: "form-label"
+                = f.text_field :color, class: "form-control"
 
-  .form-group
-    = f.label :group, class: "form-label"
-    = f.collection_select(:group_id, Group.all, :id, :name, { :include_blank => "Select group" }, class: "form-control" )
+              .form-group
+                = f.label :group, class: "form-label"
+                = f.collection_select(:group_id, Group.all, :id, :name, { :include_blank => "Select group" }, class: "form-control" )
+  .row
+    .col-md-12
+      .grid.simple
+        .grid-title 
+          %h4
+            Select 
+            %span.semi-bold Alarms
+          .tools
+            %a.collapse{href: "javascript:;"}
+        .grid-body
+          .row
+            .col-md-8.col-sm-8.col-xs-8
+            .form-group
+              = f.select :alarm_ids, Alarm.all.collect {|x| [x.name, x.id]}, {}, :multiple => true, class: "form-control"
+  .row
+    .col-md-12
+      .grid.simple
+        .grid-title 
+          %h4
+            Select  
+            %span.semi-bold Work Schedule
+          .tools
+            %a.collapse{href: "javascript:;"}
+        .grid-body
+          .row
+            .col-md-8.col-sm-8.col-xs-8             
+              .form-group
+                = f.collection_select(:work_schedule_id, WorkSchedule.all, :id, :name, { :include_blank => "Select work schedule" }, class: "form-control")
 
-  %h3 Alarms
-  .form-group
-    = f.select :alarm_ids, Alarm.all.collect {|x| [x.name, x.id]}, {}, :multiple => true, class: "form-control"
-
-  %h3 Work Schedule
-  .form-group
-    = f.collection_select(:work_schedule_id, WorkSchedule.all, :id, :name, { :include_blank => "Select work schedule" }, class: "form-control")
-
-  .form-group
-    = f.submit 'Save', class: "btn btn-primary"
+              .form-group
+                = f.submit 'Save', class: "btn btn-primary"
+              .form-group
+                = link_to 'Back', cars_path
