refactored views for creating and editing vehicles

--- a/app/views/cars/show.html.haml
+++ b/app/views/cars/show.html.haml
@@ -4,7 +4,7 @@
       %h3
         = @car.name.capitalize
   .col-md-4
-    .pull-right= button_tag "Switch View Mode", :class => "switch_map_mode btn btn-success"
+    .pull-right= button_tag "Switch Map view mode", :class => "switch_map_mode btn btn-success"
   
 .row
   .col-md-12
