--- a/app/views/alarm_notifications/index.html.haml
+++ b/app/views/alarm_notifications/index.html.haml
@@ -17,13 +17,14 @@
               %th Car
               %th Alarm
               %th Triggered at
-          %tbody
-            
+              %th
+          %tbody           
             - @alarm_notifications.each do |alarm_notification|
               %tr
-                %td= link_to alarm_notification.car.numberplate, alarm_notification.car
+                %td= link_to alarm_notification.car.name, alarm_notification.car
                 %td= link_to alarm_notification.alarm.name, alarm_notification.alarm
                 %td= alarm_notification.created_at
+                %td= link_to "Archive", archive_alarm_notification_path(alarm_notification)
 %br
 
 
