--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -189,7 +189,7 @@
                 %span.title Alarms
             %li
               %a{:href => alarm_notifications_path}
-                = fa_icon "bullhorn"
+                = fa_icon "exclamation-triangle"
                 %span.title Notifications
             - if current_user && current_user.has_role?(:admin)
               / BEGIN TWO LEVEL MENU
