--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,11 +2,11 @@
   %h3
     Vehicles (Live)
 .row
-  .col-md-8
-    .row.tiles-container.tiles.white.hidden-xlg.m-b-20
+  .col-lg-8.col-md-12.col-sm-12.col-xs-12
+    .row
       %div
         %div#cars_index{ :style => "width: 100%; height: 400px;"}
-  .col-md-4
+  .col-lg-4.col-md-12.col-sm-12.col-xs-12
     .tiles.white
       .tiles-body
         .tiles-title
