--- a/app/views/alarms/_form.html.haml
+++ b/app/views/alarms/_form.html.haml
@@ -1,35 +1,37 @@
-.row
-  .col-md-12
-    .grid.simple
-      .grid-title.no-border
-        %h4
-          &nbsp;
-        = form_for @alarm do |f|
-          - if @alarm.errors.any?
-            #error_explanation
-              %h2= "#{pluralize(@alarm.errors.count, "error")} prohibited this alarm from being saved:"
-              %ul
-                - @alarm.errors.full_messages.each do |msg|
-                  %li= msg
 
-          .field
-            = f.label :name
+= form_for @alarm do |f|
+  - if @alarm.errors.any?
+    #error_explanation
+      %h2= "#{pluralize(@alarm.errors.count, "error")} prohibited this alarm from being saved:"
+      %ul
+        - @alarm.errors.full_messages.each do |msg|
+          %li= msg
+  .row
+    .col-md-6
+      .grid.simple
+        .grid-title
+          %h4
+            Alarm details
+        .grid-body
+          .form-group
+            = f.label :name, class: "form-label"
             = f.text_field :name, class: "form-control"
 
-          %h3 Rules
+    .col-md-6
+      .grid.simple
+        .grid-title
+          %h4
+            Rules
+        .grid-body        
           #rules
             = f.fields_for :rules do |rule|
               = render 'rule_fields', :f => rule
             %p 
 
               .links
-                = link_to_add_association 'add rule', f, :rules, :class => "btn btn-info", id: "new_alarm"
-          %br
-          
-            = f.submit 'Save', class: "btn btn-primary"
-
-          %br
-
-
-%div.some{ :style => "width: 800px;" }
-  %div#multi_overlays.some{ :style => "width: 800px; height: 400px;" }
+                = link_to_add_association 'Add Rule', f, :rules, :class => "btn btn-info", id: "new_alarm"
+  .row
+    .col-md-12
+      = f.submit 'Save', class: "btn btn-primary"
+/ %div.some{ :style => "width: 800px;" }
+/   %div#multi_overlays.some{ :style => "width: 800px; height: 400px;" }
