--- a/app/views/alarms/new.html.haml
+++ b/app/views/alarms/new.html.haml
@@ -1,5 +1,10 @@
-%h1 New alarm
+.row
+  .col-md-12
+    .page-title
+      = link_to raw("<i class='icon-custom-left'></i>"), alarms_path
+      %h3
+        New Alarm 
+.row
+  .col-md-12
+    = render 'form'
 
-= render 'form'
-
-= link_to 'Back', alarms_path
