--- a/app/views/alarms/show.html.haml
+++ b/app/views/alarms/show.html.haml
@@ -1,13 +1,18 @@
 .row
   .col-md-12
+    .page-title
+      = link_to raw("<i class='icon-custom-left'></i>"), alarms_path
+      %h3
+        Alarm
+.row
+  .col-md-6
     .grid.simple
-      .grid-title.no-border
-        %h2
+      .grid-body
+        %p
+          %b Name :
           = @alarm.name
-      .grid-body.no-border
-        .form-group         
-          %b Rules :
-        .form-group
+        %p
+          %b Rules :        
           %ul
             - @alarm.rules.each do |rule|
               %li= rule_with_params(rule,@alarm)
